--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,20 +1,19 @@
-body{
-    font-family: sans-serif;
-}
 
-section.hero.is.bold{
-    background-image: url("../css/images/hero2.jpeg");
+html  {
+    background-image: url('../images/hero2.jpeg');
     background-size: cover;
     background-position: center center;
-    opacity: 0.5;
+    font-family: 'Roboto',sans-serif;
+    
+    
 }
 
-input.{
-    border-radius: 4px;
+.box {
+    opacity: .9;
+
 }
 
 .hero{
-  
     position: relative;
     overflow: hidden;
 }
@@ -25,4 +24,10 @@ input.{
     width: 100%;
     height: 100%;
 }
+
+.button {
+    padding: ;
+}
+    
+
   
