--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,33 +1,26 @@
-
-html  {
-    background-image: url('../images/hero2.jpeg');
-    background-size: cover;
-    background-position: center center;
-    font-family: 'Roboto',sans-serif;
-    
-    
+html {
+  background-image: url('../images/hero2.jpeg');
+  background-size: cover;
+  background-position: center center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .box {
-    opacity: .9;
-
+  opacity: 0.9;
 }
 
-.hero{
-    position: relative;
-    overflow: hidden;
+.hero {
+  position: relative;
+  overflow: hidden;
 }
 .has-background {
-    position: absolute;
-    object-fit: cover;
-    object-position: center center;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  object-fit: cover;
+  object-position: center center;
+  width: 100%;
+  height: 100%;
 }
 
 .button {
-    padding: ;
+  padding: 0;
 }
-    
-
-  
