removed search bar and added spotify button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,11 +29,12 @@ html  {
 }
 
 .button {
-    padding-right: 20%;
-    padding-left: 20;
-    margin-left: 10%;
+    padding-right: 10%;
+     margin-left: 10%; 
+     margin-right: 10%;
+     padding-left: 7%;
+     
 }
+
     
-
-
   
