--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,40 +1,43 @@
-
-html  {
-    background-image: url('../images/hero2.jpeg');
-    background-size: cover;
-    background-position: center center;
-    font-family: 'Roboto',sans-serif;
-
-    
-    
-    
+html {
+  background-image: url('../images/hero2.jpeg');
+  background-size: cover;
+  background-position: center center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .box {
-    opacity: .9;
-    margin-top: 20%;
-
+  opacity: 0.9;
+  margin-top: 20%;
 }
 
-.hero{
-    position: relative;
-    overflow: hidden;
+.hero {
+  position: relative;
+  overflow: hidden;
 }
 .has-background {
-    position: absolute;
-    object-fit: cover;
-    object-position: center center;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  object-fit: cover;
+  object-position: center center;
+  width: 100%;
+  height: 100%;
 }
 
 .button {
-    padding-right: 10%;
-     margin-left: 10%; 
-     margin-right: 10%;
-     padding-left: 7%;
-     
+  padding-right: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-left: 7%;
 }
 
-    
-  
+.now-playing {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.now-playing figure {
+  width: 24rem;
+  border: 1px solid black;
+}
+.now-playing img {
+  opacity: 1;
+}
