--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,44 +1,66 @@
 html {
+
+  width: 100%;
+  height: 100%;
+  
+}
+
+body {
   background-image: url('../images/hero2.jpeg');
   background-size: cover;
-  background-position: center center;
+  background-position: center center ;
+  /* position: absolute; */
   font-family: 'Roboto', sans-serif;
+  
 }
+
 
 .box {
   opacity: 0.9;
-  margin-top: 20%;
+  /* margin-top: 20%; */
 }
 
-.hero {
+/* .hero {
   position: relative;
   overflow: hidden;
-}
-.has-background {
-  position: absolute;
-  object-position: center center;
-  width: 100%;
-  height: 100%;
-}
+} */
+
 
 .button {
   padding-right: 10%;
-  margin-left: 30%;
-  margin-right: 10%;
+  /* margin-left: 25%;
+  margin-right: 10%; */
   padding-left: 7%;
-  
+
+
 }
 
 .now-playing {
   display: flex;
   flex-direction: row;
   align-items: center;
+
 }
 .now-playing figure {
   width: 24rem;
   border: 1px solid black;
 }
-.now-playing img {
-  opacity: 1;
+
+
+.lyrics-container {
+  display: flex;
+  flex-direction: column;
+  
+
+}
+
+.first-tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  opacity: .9;
+  padding: 1rem;
+
 }
 
