fixed image responsiveness for 375x812

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,16 +22,15 @@ body {
 
 .box {
   opacity: 0.9;
-   /* min-width: fit-content; */
-  
-  
-  
-}
 
-image {
-  min-width: fit-content;
+
 
 }
+
+figure.image.responsive {
+  width: 100%;
+}
+
 
 .now-playing {
   display: flex;
